--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/rstefani87info/ares-os#readme",
   "dependencies": {
-    "@ares/files": "github:rstefani87info/ares-files#master",
+    "@ares/files": "git+https://github.com/rstefani87info/ares-files.git#master",
     "os": "^0.1.2"
   }
 }
